5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1671_1105.log
== TEST (2019-04-24 15:54:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input()
print("Entrada:", a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:54:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input()
print("Entrada:", a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao Invalido")
-- EXECUTION TIME:
0.185645
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:55:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input()
print("Entrada:", a)
if(a=="lobo"):
	print("Casa: Stark")
elif(a=="leao"):
	print("Casa: Lannister")
elif(a=="veado"):
	print("Casa: Baratheon")
elif(a=="dragao"):
	print("Casa: Targaryen")
elif(a=="rosa"):
	print("Casa: Tyrell")
elif(a=="sol"):
	print("Casa: Martell")
elif(a=="lula"):
	print("Casa: Greyjoy")
elif(a=="esfolado"):
	print("Casa: Bolton")
elif(a=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.154355
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:05:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(lobo):
	print("Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:05:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(lobo):
	print("Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:06:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao==lobo):
	print("Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(brasao==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:07:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao):
	print("Stark")
-- OUTPUT:
Entrada: lula
Stark
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:07:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(lobo):
	print("Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:07:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Stark")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:08:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(leao):
	print("Casa: Lannister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:08:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif("leao"):
	print("Casa: Lannister")
-- OUTPUT:
Entrada: lula
Casa: Lannister
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:13:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:13:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:14:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:14:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 10:14:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de s
brasao=input("descricao do brasao:")
print("Entrada:", brasao)
if(brasao=="lobo"):
	print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
	print("Casa: Baratheon")
elif(brasao=="dragao"):
	print("Casa: Targaryen")
elif(brasao=="rosa"):
	print("Casa: Tyrell")
elif(brasao=="sol"):
	print("Casa: Martell")
elif(brasao=="lula"):
	print("Casa: Greyjoy")
elif(brasao=="esfolado"):
	print("Casa: Bolton")
elif(brasao=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.118682
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
